# nRF9160-UDP-client

./: CMakeLists.txt  Kconfig  README.md  prj.conf  prj_thingy91_nrf9160ns.overlay  west.yml
src/: board.c  board.h  led.c  led.h  main.c  modem.c  modem.h  util.c  util.h
